[project]
name = "streamlit-chatbot"
version = "0.1.0"
description = "Chatbot application using Streamlit and Google GenAI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.68.0",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
